--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,10 +1,10 @@
 name: build-and-deploy
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "1-fix-deployment-pipeline"]
 
 env:
-  IMAGE: ghcr.io/${{ github.repository }}
+  IMAGE: ghcr.io/timhasenkamp/go-ytdown
 
 jobs:
   build-and-push:
@@ -12,25 +12,29 @@ jobs:
     permissions:
       contents: read
       packages: write
-    outputs:
-      digest: ${{ steps.push.outputs.digest }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push
-        id: push
+
+      - name: Build and push (latest + sha)
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
-            ${{ env.IMAGE }}:latest
-            ${{ env.IMAGE }}:${{ github.sha }}
+            ghcr.io/timhasenkamp/go-ytdown:latest
+            ghcr.io/timhasenkamp/go-ytdown:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
