--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,7 +1,7 @@
 name: build-and-deploy
 on:
   push:
-    branches: ["main", "1-fix-deployment-pipeline"]
+    branches: ["main"]
 
 env:
   IMAGE: ghcr.io/timhasenkamp/go-ytdown
@@ -14,38 +14,32 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
         with:
           driver: docker-container
-
-      - name: Log in to GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push (latest + sha)
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/timhasenkamp/go-ytdown:latest
-            ghcr.io/timhasenkamp/go-ytdown:${{ github.sha }}
+            ${{ env.IMAGE }}:latest
+            ${{ env.IMAGE }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: read
     steps:
-      - name: SSH deploy
+      - name: SSH deploy (persist GHCR login)
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -53,16 +47,10 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             set -euo pipefail
+            # Persistentes Login (legt ~/.docker/config.json an/aktualisiert es)
+            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ secrets.GHCR_USER }}" --password-stdin
+
             cd ${{ secrets.SERVER_DEPLOY_PATH }}
-
-            # Public Image: Login nicht nötig. Für private GHCR-Images:
-            if [ -n "${{ secrets.GITHUB_TOKEN }}" ]; then
-              echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin || true
-            fi
-
-            # Digest setzen (immutable deploy)
-            echo "IMAGE_DIGEST=${{ needs.build-and-push.outputs.digest }}" > .env
-
             docker compose pull
             docker compose up -d --remove-orphans
             docker image prune -f || true
