--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,7 +1,7 @@
 name: build-and-deploy
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "1-fix-deployment-pipeline"]
 
 env:
   IMAGE: ghcr.io/timhasenkamp/go-ytdown
