--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -38,19 +38,26 @@ jobs:
   deploy:
     needs: build-and-push
     runs-on: ubuntu-latest
+    # Sicherheitsgurt: Deploy nur bei push (nicht bei PR aus Fork)
+    if: github.event_name == 'push'
     steps:
-      - name: SSH deploy (persist GHCR login)
+      - name: Validate required secrets
+        run: |
+            test -n "${{ secrets.SERVER_HOST }}" || (echo "SERVER_HOST missing" && exit 1)
+            test -n "${{ secrets.SERVER_USER }}" || (echo "SERVER_USER missing" && exit 1)
+            test -n "${{ secrets.SERVER_SSH_KEY }}" || (echo "SERVER_SSH_KEY missing" && exit 1)
+            test -n "${{ secrets.SERVER_DEPLOY_PATH }}" || (echo "SERVER_DEPLOY_PATH missing" && exit 1)
+
+      - name: SSH deploy
         uses: appleboy/ssh-action@v1.2.0
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            set -euo pipefail
-            # Persistentes Login (legt ~/.docker/config.json an/aktualisiert es)
-            echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u "${{ secrets.GHCR_USER }}" --password-stdin
+            host: ${{ secrets.SERVER_HOST }}
+            username: ${{ secrets.SERVER_USER }}
+            key: ${{ secrets.SERVER_SSH_KEY }}
+            script: |
+                set -euo pipefail
+                cd ${{ secrets.SERVER_DEPLOY_PATH }}
+                docker compose pull
+                docker compose up -d --remove-orphans
+                docker image prune -f || true
 
-            cd ${{ secrets.SERVER_DEPLOY_PATH }}
-            docker compose pull
-            docker compose up -d --remove-orphans
-            docker image prune -f || true
