chore: gitirgnore updated

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ lerna-debug.log*
 # Gilt repo-weit und für z.B. ./backend, ./server, etc.
 # -----------------------------
 # Build-Outputs / Binaries
+downloads/
 bin/
 **/bin/
 build/
